fix badly aligned text on del and clr buttons

--- a/src/Components/Calculator/calculator.css
+++ b/src/Components/Calculator/calculator.css
@@ -32,6 +32,7 @@
   width: 5.1rem;
   font-size: 2.1rem;
   font-weight: bold;
+  text-align: center;
   background-color: #303030;
   color: #cfcfcf;
   border: none;
